<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="slika_spavac"
        android:summary="@string/pref_description_slika_spava"
        android:title="@string/pref_slika_spava" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_naslov_aktivnosti"
        android:inputType="text"
        android:key="naslov_aktivnosti"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_naslov_aktivnosti" />

    <ListPreference
        android:defaultValue="#FFFFFF"
        android:entries="@array/pref_lista_boja"
        android:entryValues="@array/pref_idx_lista_boja"
        android:key="lista_boja"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_lista_boja" />

</PreferenceScreen>